# rstd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine.cpp  engine.h  engine.hpp  images.hpp  initializers.hpp  main.cpp  main.cu  types.h  vec3.h
ext/: CMakeLists.txt
shaders/: triangle.slang
